src/content/docs/sdk/android/v4/features/attribution-zh.mdx
---
title: 获取归因信息
description: 使用 Adjust SDK 监听归因变化
slug: zh/sdk/android/v4/features/attribution
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /zh/sdk/android/features/attribution
---

用户与 Adjust 链接交互时，其归因信息会发生更新。用户与[深度链接](https://help.adjust.com/zh/article/deep-links)交互时可能会发生这种情况。用户归因相关信息会在 `AdjustAttribution` 类中展现。

## AdjustAttribution 类属性 {#adjustattribution-class-properties}

`AdjustAttribution` 类包含设备当前归因状态的细节。任何未针对用户填充的值都会返回 `null` 值。

<Callout type="note">

只有在[您的 `AdjustConfig` 实例 `needsCost` 属性](/zh/sdk/android/configuration#enable-cost-data-sending)为 `true` 的情况下，才能访问下列值：

-  `costType`
-  `costAmount`
-  `costCurrency`

</Callout>
<Table>

| 值                  | 数据类型 | 描述                                                                                          |
| ------------------- | -------- | --------------------------------------------------------------------------------------------- |
| `trackerToken`      | `String` | 设备当前归因链接的识别码                                                                      |
| `trackerName`       | `String` | 设备当前归因链接的名称                                                                        |
| `network`           | `String` | 设备当前归因渠道的名称                                                                        |
| `campaign`          | `String` | 设备当前归因推广活动的名称                                                                    |
| `adgroup`           | `String` | 设备当前归因广告组的名称                                                                      |
| `creative`          | `String` | 设备当前归因素材的名称                                                                        |
| `clickLabel`        | `String` | 用于标记安装的[点击标签](https://help.adjust.com/zh/article/user-rewards)                     |
| `adid`              | `String` | 设备的唯一 Adjust ID                                                                          |
| `costType`          | `String` | 推广活动定价模型 \(如 cpi\)                                                                   |
| `costAmount`        | `Double` | 安装成本                                                                                      |
| `costCurrency`      | `String` | 与成本关联的货币的 [3 字符 ISO 4217 代码](https://www.iban.com/currency-codes)。              |
| `fbInstallReferrer` | `String` | [Facebook install referrer](https://developers.facebook.com/docs/app-ads/install-referrer/)， |

</Table>

## 发生归因变化时触发函数 {#trigger-a-function-when-attribution-changes}

<CodeBlock title="方法签名">

```java
public void setOnAttributionChangedListener(OnAttributionChangedListener onAttributionChangedListener)
```

</CodeBlock>

SDK 可监听归因变更并在发现更新时调用一个函数。要配置您的回传函数，请使用函数名称作为参数调用`setOnAttributionChangedListener`方法。

<Callout type="important">

您必须在应用中初始化 Adjust SDK **之前** 调用`setOnAttributionChangedListener`方法。

</Callout>
<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnAttributionChangedListener {
   override fun onAttributionChanged(attribution: AdjustAttribution) {}
   }
//...
Adjust.onCreate(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
config.setOnAttributionChangedListener(new OnAttributionChangedListener() {
   @Override
   public void onAttributionChanged(AdjustAttribution attribution) {}
});
//...
Adjust.onCreate(config);
```

</Tab>
<Tab title="Javascript" sync="js">

```js
function attributionCallback(attribution) {}
//...
let adjustConfig = new AdjustConfig(yourAppToken, environment);
adjustConfig.setAttributionCallback(attributionCallback);
Adjust.onCreate(adjustConfig);
```

</Tab>
</Tabs>

### Facebook install referrer {#facebook-install-referrer}

Adjust SDK 通过[`AdjustAttribution` 对象](#adjustattribution-class-properties) `String` 属性的形式接收 Facebook install referrer 信息。您可以将此内容作为 JSON 对象序列化，以此获取此信息。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnAttributionChangedListener {
   val fbInstallReferrerJSONObject = extractFBInstallReferrerJSON(it)
}

fun extractFBInstallReferrerJSON(adjustAttribution: AdjustAttribution): JSONObject? {
   try {
      return JSONObject(adjustAttribution.fbInstallReferrer)
   } catch (e: JSONException) {
      Log.d("example", e.message!!)
   }
   return null
}
//...
Adjust.onCreate(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
config.setOnAttributionChangedListener(new OnAttributionChangedListener() {
   @Override
   public void onAttributionChanged(AdjustAttribution adjustAttribution) {
   JSONObject fbInstallReferrerJSONObject = extractFBInstallReferrerJSON(adjustAttribution);
   }
});

@Nullable
JSONObject extractFBInstallReferrerJSON(AdjustAttribution adjustAttribution) {
   try {
      return new JSONObject(adjustAttribution.fbInstallReferrer);
   } catch (JSONException e) {
      Log.d("example", e.getMessage());
   }
   return null;
}
//...
Adjust.onCreate(config);
```

</Tab>
</Tabs>

## 获取当前归因信息 {#get-current-attribution-information}

<CodeBlock title="方法签名">

```java
public static AdjustAttribution getAttribution()
```

</CodeBlock>

用户安装您的应用时，Adjust 会将该安装归因至一个推广活动。Adjust SDK 可提供赢得安装归因的推广活动细节。要返回此信息，请调用`getAttribution`方法，以`AdjustAttribution`对象的形式返回归因信息。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val attribution = Adjust.getAttribution()
```

</Tab>
<Tab title="Java" sync="java" >

```java
AdjustAttribution attribution = Adjust.getAttribution();
```

</Tab>
<Tab title="Javascript" sync="js" >

```js
let attribution = Adjust.getAttribution();
```

</Tab>
</Tabs>
